replace log4j wit slf4j, cleanups